@@ -20,7 +20,7 @@ repositories {
 
 group = 'com.kirchnersolutions'
 version = '1.0.00a'
-def build = '100103'
+def build = '100104'
 sourceCompatibility = '1.8'
 
 
@@ -65,8 +65,8 @@ compileJava.dependsOn copyWebApp*/
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compile 'org.springframework.mobile:spring-mobile-device:2.0.0.BUILD-SNAPSHOT'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	//compile 'org.springframework.mobile:spring-mobile-device:2.0.0.BUILD-SNAPSHOT'
+	//implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	compile name: 'Utilities-1.0.00'
