@@ -1,0 +1,16 @@
+package com.kirchnersolutions.PiCenter.servers.beans;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Setter
+public class RestUser {
+
+    private String userName = "null", token = "null", page = "/login", ip = "null", stompId = "null";
+
+}
